package io.github.crystals_of_the_soul.model.ending;

public interface EndingStrategy {
    String getTitle();
    String getNarrative();
    boolean isInteractive();
}
