@startuml EndingHandling
!pragma layout smetana
skinparam classAttributeIconSize 0

interface EndingStrategy {
    + getTitle() : String
    + getNarrative() : String
    + isInteractive() : boolean
}

class HeroEndingStrategy {
    + getTitle() : String
    + getNarrative() : String
    + isInteractive() : boolean
    ' false
}

class GuardianEndingStrategy {
    + getTitle() : String
    + getNarrative() : String
    + isInteractive() : boolean
    ' false
}

class CitizenEndingStrategy {
    + getTitle() : String
    + getNarrative() : String
    + isInteractive() : boolean
    ' false
}

class WandererEndingStrategy {
    + getTitle() : String
    + getNarrative() : String
    + isInteractive() : boolean
    ' false
}

class ChoiceEndingStrategy {
    + getTitle() : String
    + getNarrative() : String
    + isInteractive() : boolean
    ' true — player must choose
}

class EndingResolver {
    - {static} EndingResolver()
    + {static} resolve(GameState) : EndingStrategy
}

class GameState {
    + int killCount
    + int spareCount
    - CrystalType crystal
    + determineEnding() : EndingStrategy
    + hasCrystal() : boolean
    + getCrystal() : CrystalType
}

class EndingScreen {
    - Main game
    - GameState state
    - EndingStrategy ending
    + EndingScreen(Main, GameState)
    + EndingScreen(Main, GameState, EndingStrategy)
    + show()
    + render(float delta)
}

EndingStrategy <|.. HeroEndingStrategy
EndingStrategy <|.. GuardianEndingStrategy
EndingStrategy <|.. CitizenEndingStrategy
EndingStrategy <|.. WandererEndingStrategy
EndingStrategy <|.. ChoiceEndingStrategy

GameState --> EndingResolver : delegates to
EndingResolver ..> EndingStrategy : <<creates>>

EndingScreen --> EndingStrategy : uses
EndingScreen --> GameState : reads

note right of EndingResolver
  resolve(state) logic:
  RED   → GuardianEndingStrategy
  BLUE  → HeroEndingStrategy
  GREEN + killCount > spareCount → WandererEndingStrategy
  GREEN + spareCount > killCount → CitizenEndingStrategy
  GREEN + killCount == spareCount → ChoiceEndingStrategy
end note

note right of ChoiceEndingStrategy
  isInteractive() == true.
  EndingScreen shows two buttons:
  "Leave dungeon"  → CitizenEndingStrategy
  "Stay as guardian" → GuardianEndingStrategy
end note

@enduml
